# CodigoNaoTesis

./: CMakeLists.txt  DatosSim.txt  README.md  Test1.m  Test10.m  Test11.m  Test2.m  Test3.m  Test4.m  Test5.m  Test6.m  Test7.m  Test8.m  Test9.m  autoload.ini  main.cpp  onfacedetection.cpp  onfacedetection.h  qiproject.xml
